[package]
name = "zenoh_coordinator"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zenoh_coordinator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "1.9.0"
tokio = { version = "1.37.0", features = ["full", "macros"] }
clap = { version = "=4.4.18", features = ["derive"] }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
rand_chacha = "0.3.1"
virtmcu-api = { path = "../../hw/rust/common/virtmcu-api" }
flatbuffers = "25.12.19"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.clippy]
str_to_string = "deny"
