[package]
name = "s32k144-lpuart"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[lints] 
workspace = true 

[dependencies]
virtmcu-qom = { path = "../virtmcu-qom" }
virtmcu-zenoh = { path = "../virtmcu-zenoh" }
virtmcu-api = { path = "../virtmcu-api" }
zenoh = { workspace = true }
flatbuffers = { workspace = true }
crossbeam-channel = "0.5"
