[package]
name = "zenoh-802154"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]

[lints] 
workspace = true 

[dependencies]
zenoh.workspace = true
virtmcu-qom.workspace = true
virtmcu-zenoh.workspace = true
virtmcu-api.workspace = true
byteorder.workspace = true
rand = "0.8"
