[package]
name = "zenoh-netdev"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
virtmcu-api.workspace = true
zenoh.workspace = true
virtmcu-qom.workspace = true
virtmcu-zenoh.workspace = true
libc.workspace = true
crossbeam-channel.workspace = true
byteorder.workspace = true
