[package]
name = "zenoh-netdev"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]

[lints] 
workspace = true 

[dependencies]
virtmcu-api.workspace = true
zenoh.workspace = true
virtmcu-qom.workspace = true
virtmcu-zenoh.workspace = true
crossbeam-channel.workspace = true
