[package]
name = "zenoh-spi"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]

[lints] 
workspace = true 

[dependencies]
virtmcu-qom.workspace = true
virtmcu-zenoh.workspace = true
virtmcu-api.workspace = true
zenoh.workspace = true
