[package]
name = "virtmcu-api"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints] 
workspace = true 

[dependencies]
flatbuffers.workspace = true

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = "1.4.0"
virtmcu-qom = { path = "../virtmcu-qom" }
