[package]
name = "virtmcu-api"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints.clippy]
ref_as_ptr = "allow"
elidable_lifetime_names = "allow"

[dependencies]
flatbuffers.workspace = true

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = "1.4.0"
virtmcu-qom = { path = "../virtmcu-qom" }
