[package]
name = "flexray"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]
[lints] 
workspace = true 
[dependencies]
zenoh.workspace = true
virtmcu-api.workspace = true
transport-zenoh.workspace = true
virtmcu-qom.workspace = true
transport-unix.workspace = true
crossbeam-channel.workspace = true
flatbuffers.workspace = true
[package.metadata.cargo-machete]
ignored = ["zenoh", "transport-zenoh", "transport-unix", "serde", "serde_json", "tracing", "virtmcu-qom"]
