[package]
name = "s32k144-lpuart"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
[lints] 
workspace = true 
[dependencies]
zenoh.workspace = true
virtmcu-qom.workspace = true
transport-zenoh.workspace = true
transport-unix.workspace = true
virtmcu-api.workspace = true
flatbuffers = { workspace = true }
crossbeam-channel = "0.5"
[package.metadata.cargo-machete]
ignored = ["zenoh", "transport-zenoh", "transport-unix", "serde", "serde_json", "tracing", "virtmcu-qom"]
